--- a/main.tex
+++ b/main.tex
@@ -84,7 +84,7 @@ So Eddington considered rightly the Cosmic Large Number correlations, as recalle
 
 The present article shows that \textit{Physics is a unique part of Mathematics}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and biological parameters, involving main mathematical constants in particle physics: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, these relations confirm the super-string theory but with complete rehabilitation of the tachyonic bosonic string theory.
 
-\textit{A decisive point of physics is the energy conservation, or the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why does people ask questions ? We propose that the parameters are optimal basis in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics, and three-point temperatures of mammals and main molecules [3 and references therein].
+\textit{A decisive point of physics is the energy conservation, or the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why does people ask questions ? We propose that the parameters are optimal basis in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics, and three-point temperatures of mammals and main molecules [3].
 
 \textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the Copenhagen statistical interpretation of quantum mechanics.
 
