--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@ $^9$Retired Maitre de Conference at Ecole Nationale Superieure d'Architecture Pa
 \medskip
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
-The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle, and interpretating the physical dimensionless parameters as optimal calculation basis. The later are unified in the Topological Axis, which rehabilitates the string theory dimension series 4k+2, with emphasis on the values 26 (Universe) and 10 (Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor $10^{61}$, resolving the vacuum energy dilemma. An holographic scanning explains at last the Universe vastness, justifying the pertinence of large numbers, such as the Eddington's one which appears as the number of neutrons in the trivial ratio 3/10 of the visible Universe, so justifying black matter existence. The galaxy recession and the massive black holes are both associated to the second thermodynamics principle. The supercycle period is given by the dimensional analysis, and linked to the holic dimension 30 and, throught the Monster group order, to the Kotov's absolute clock period. This confirms the matter-antimatter Oscillatory Bounce (frequency $10^{104}$~Hz), unifying the standard Single Bang cosmology with the Steady-State one, and the return to the Newton's absolute space-time, realized by the cosmic microwave radiationn, considered as the Grandcosmos emanation. The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 and the Atiyah's constant. It is predicted that Koide relation, massive gluons and composite d quark will deblock Particle Physics and that future telescopes will find mature galaxies at very large distances (instead of a dark space), ruining thus the standard evolutionary cosmology, ill-founded on the imperfect cosmological principle.
+The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, in conformity with the first thermodynamics principle, inverting the anthropic principle, and interpretating the physical dimensionless parameters as optimal calculation basis. The later are unified in the Topological Axis, which rehabilitates the string theory dimension series 4k+2, with emphasis on the values 26 (Universe) and 10 (Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor $10^{61}$, resolving the vacuum energy dilemma. An holographic scanning explains at last the Universe vastness, justifying the pertinence of large numbers, such as the Eddington's one, which is the number of neutrons in the trivial ratio 3/10 of the visible Universe, so justifying black matter existence. The galaxy recession and the massive black holes are both associated to the second thermodynamics principle. The supercycle period is given by the dimensional analysis, and linked to the holic dimension 30 and, throught the Monster group order, to the Kotov's absolute clock period. This confirms the matter-antimatter Oscillatory Bounce (frequency $10^{104}$~Hz), unifying the standard Single Bang cosmology with the Steady-State one, and the return to the Newton's absolute space-time, realized by the cosmic microwave radiationn, considered as the Grandcosmos emanation. The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 and the Atiyah's constant. It is predicted that Koide relation, massive gluons and composite d quark will deblock Particle Physics and that future telescopes will find mature galaxies at very large distances (instead of a dark space), ruining thus the standard evolutionary cosmology, ill-founded on the imperfect cosmological principle.
 
 %% TODO: Insérer axe topologique
 }}\smallskip
@@ -95,7 +95,7 @@ So, when Proust and Dalton found whole numbers in chemical reactions, they were 
 \subsection{Plan}
 This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and the small, close to unity. The optimal computation basis $e$ is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2$^{n/4}$), the secondary basis being 2, the simplest of all (Fig. 1).
 
-The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. We consider mainly the famous prime number 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the Monster group. The second section will study intermediate mathematical constants, of Eddington (137), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), Bizouard ($f$) and Matthieu (7920). The third Section involves mainly the constants $\pi$, $e$ and $\gamma$. 
+The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. We consider mainly the famous prime number 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the Monster group. The second section will study intermediate mathematical constants, of Eddington (137), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), Bizouard ($f$) and Matthieu (7920). The third Section involves in addition the constants $\pi$, $e$ and $\gamma$. 
 
 \section {Internal Fine Tuning and Canonical Large Numbers}
 We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, particle physics and mathematics.
@@ -104,7 +104,7 @@ We look here for a systematic organization of dimensionless physical quantities 
 
 The most famous fine tuning implies cosmic quantities, awkwardly called the `Double
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
-clue in steady-state cosmology based on the above \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity) [3].
+clue in steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity) [3].
 This Cosmic Fine-Tuning leads directly to a Gravitational Hydrogen model of the universe [3]
 defining the Universe horizon radius: $R = 2a_{G} \lambdabar_{e}$ the factor 2 coming from the two atoms in
 Hydrogen molecule, where 
@@ -113,12 +113,10 @@ is the Electron Compton reduced wavelength, and the
 gravitational coupling constant is: 
 $a_{G} = \hbar c/Gm_{p}m_{H}$
 So, \textit{the speed c is eliminated}, in accordance with
-Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $ corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
-most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured
-directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by $9\%$,
-value.
+Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
+most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by $9\%$, value.
 
-Consider the wavelength $$\lambdabar_{M} = \hbar /Mc \approx 4 \cdot 10^{-96} m$$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
+Consider the wavelength $$\lambdabar_{M} = \hbar /Mc \approx 4 \times 10^{-96} m$$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
 corresponding to $n \approx 2e^{e}$, to $0.01\%$. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
 and results from the imbrication of relations of the form 
 $
@@ -137,15 +135,15 @@ $$
 \sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}\\ % 3rd row
 \end{array}
 $$
-which includes the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV.  Thus, the correlation is eightfold,
+which includes the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Thus, the correlation is eightfold,
 including, apart the two ones above, three relations which have been independently reported [3].
 The overall large number $2^{256}$ has an evident computational character, confirmed below by the
 dramatic appearance of the Eddington Large Number.
 
 In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation which is incompatible with the standard evolutionary cosmology. By this order of magnitude, we infer rather precise relations. With the Hydrogen radius $r$, we infer $$R/r \approx (4\pi \lambda_{CMB} /r)^{4}$$ precise to $0.6\%$. 
 Considering the standard cosmological neutrino background (CNB), which wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we note that $$R/ \lambdabar_{e} \approx
-( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$.
-One notes that the appearance of the neutrino field is conform
+( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$
+The appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce [5].
 
@@ -155,14 +153,15 @@ antimatter Oscillatory Bounce [5].
 \caption{The Topological Axis. Double logarithm (y = lnln(Y)) of main dimensionless physical quantities 
 Y corresponds to the String dimension series n = 4k + 2, from k = 0 to k = 7, showing the Cartan-Bott
 periodicity 8 [25] which is at the origin of the name `topological axis`.
+
     With unit the Electron Compton wavelength, in the macro-physics side, the Universe circumference 
     is tied to bosonic critical dimension 26, while reduction lead to n = 18 (thermal photon, 
-    tied to the the mammal wavelengt throught the Sternheimer scale factor j), n = 10, (superstring 
-    dimension, Hydrogen atom), and n = 2 (String). For the number 24 of transverses dimensions, it is
-    the Kotov length, through a factor 2$\pi$a, with a = 137.036. For $n = \Gamma $, the Atiyah constant, it is the 
-    galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k = e^{2}$, y = 2e, it is 
+    tied to the the mammal wavelength throught the Sternheimer scale factor j), n = 10, (superstring 
+    dimension, Hydrogen atom - Pion couple), and n = 2 (String). For the number 24 of transverses dimensions, it is
+    the Kotov length, through a factor 2$\pi$a, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant, it is the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k = e^{2}$, $y\approx 2e$, it is 
     the Grandcosmos radius.
-    With the same unit,the Electron Compton wavelength, in the micro-physics side, the Space-Time-Matter
+    
+    With the same unit, the Electron Compton wavelength, in the micro-physics side, the Space-Time-Matter
     Holic dimension n = 30 is tied to c times the cosmic Supercycle period, while reduction lead to
     n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
     For the superstring $n = 10$, it is the Pion. For $k = \pi$, $n = \gamma \times \Gamma$, $Y \approx 496^2$ 
@@ -171,8 +170,10 @@ periodicity 8 [25] which is at the origin of the name `topological axis`.
     which identifies with the monoradial unit length of the Bekenstein-Hawking Univers entropy.
     With unit the electron mass, n = 24 would correspond to the photon mass, while $n = \Gamma$, 
     to the graviton mass.
+    
     With unit the Kotov length, the Holic dimension n = 30 corresponds to the Monster cardinal, 
     apart a $\sqrt2$ factor.}
+    
     The central dimension is $n = 16$, suggesting that the whole schema is tied to the Eddington's matrix $16 \times 16$.
 \label{fig:figure_label}
 \end{figure*}
