--- a/main.tex
+++ b/main.tex
@@ -168,7 +168,7 @@ periodicity 8 [25] which is at the origin of the name `topological axis`.
     which identifies with the monoradial unit length of the Bekenstein-Hawking Univers entropy.
    \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while $n = \Gamma$, 
     to the graviton mass.
-    \{With unit the Kotov length}, the Holic dimension n = 30 corresponds to the Monster cardinal, 
+    \textit{With unit the Kotov length}, the Holic dimension n = 30 corresponds to the Monster cardinal, 
     apart a $\sqrt2$ factor.}
     The central dimension is $n = 16$, suggesting that the whole schema is tied to the Eddington's matrix $16 \times 16$.
 \label{fig:figure_label}
