--- a/main.tex
+++ b/main.tex
@@ -162,11 +162,11 @@ periodicity 8 [25] which is at the origin of the name `topological axis`.
    \textit{With the same unit, the Electron Compton wavelength, in the micro-physics side}, the Space-Time-Matter
     Holic dimension n = 30 is tied to $c$ times the cosmic Supercycle period, while Cartan-Bott reduction lead to the gauge bosons:
     n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
-    For the superstring $n = 10$, it is the Pion. For $k = \pi$, $n = \gamma \times \Gamma$, $Y \approx 496^2$ 
-    the square of the String dimension and the tenth root of the Monster cardinal, it is
-    the Higgs boson (125 GeV). For $k = 2e^e$, it is the Topon, the visible Universe wavelength,
+    For the superstring $n = 10$, it is the Pion. For $k \approx \pi$, $n \approx \gamma \times \Gamma$, $Y \approx 496^2$ 
+    the square of the Green-Schwartz String dimension and the tenth root of the Monster cardinal, it is
+    the Higgs boson (125 GeV). For $k \approx 2e^e$, it is the Topon, the visible Universe wavelength,
     which identifies with the monoradial unit length of the Bekenstein-Hawking Univers entropy.
-   \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while $n = \Gamma$, 
+   \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while $n \approx \Gamma$, 
     to the graviton mass.
     \textit{With unit the Kotov length}, the Holic dimension n = 30 corresponds to the Monster cardinal, 
     apart a $\sqrt2$ factor.}
