--- a/main.tex
+++ b/main.tex
@@ -154,17 +154,17 @@ antimatter Oscillatory Bounce [5].
 Y corresponds to the String dimension series n = 4k + 2, from k = 0 to k = 7, showing the Cartan-Bott
 periodicity 8 [25] which is at the origin of the name `topological axis`. 
 \textit{With unit the Electron Compton wavelength, in the macro-physics side}, the Universe circumference 
-    is tied to bosonic critical dimension 26, while Cartan-Bott reduction lead to n = 18 (thermal photon, 
+    is tied to bosonic critical dimension 26, while Cartan-Bott reduction leads to n = 18 (thermal photon, 
     tied to the the mammal wavelength throught the Sternheimer scale factor j), n = 10, (superstring 
-    dimension, Hydrogen atom - Pion couple), and n = 2 (String). For the number 24 of transverses dimensions, it is
-    the Kotov length, through a factor 2$\pi$a, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant, it is the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k = e^{2}$, $y\approx 2e$, it is 
+    dimension, Hydrogen atom), and n = 2 (String). For the number 24 of transverses dimensions, it is
+    the Kotov length, through a factor 2$\pi$a, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant, it is the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k \approx e^{2}$, $y\approx 2e$, it is 
     the Grandcosmos radius.
    \textit{With the same unit, the Electron Compton wavelength, in the micro-physics side}, the Space-Time-Matter
     Holic dimension n = 30 is tied to $c$ times the cosmic Supercycle period, while Cartan-Bott reduction lead to the gauge bosons:
     n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
     For the superstring $n = 10$, it is the Pion. For $k \approx \pi$, $n \approx \gamma \times \Gamma$, $Y \approx 496^2$ 
-    the square of the Green-Schwartz String dimension and the tenth root of the Monster cardinal, it is
-    the Higgs boson (125 GeV). For $k \approx 2e^e$, it is the Topon, the visible Universe wavelength,
+    the square of the Green-Schwartz string dimension and the tenth root of the Monster cardinal, it is
+    the Brout-Englert-Higgs boson (125 GeV). For $k \approx 2e^e$, it is the Topon, the visible Universe wavelength,
     which identifies with the monoradial unit length of the Bekenstein-Hawking Univers entropy.
    \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while $n \approx \Gamma$, 
     to the graviton mass.
