--- a/main.tex
+++ b/main.tex
@@ -95,7 +95,7 @@ So, when Proust and Dalton found whole numbers in chemical reactions, they were 
 \subsection{Plan}
 This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and the small, close to unity. The optimal computation basis $e$ is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2$^{n/4}$), the secondary basis being 2, the simplest of all (Fig. 1).
 
-The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. We consider mainly the famous prime number 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the Monster group. The second section will study intermediate mathematical constants, of Eddington (137), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), Bizouard ($f$) and Matthieu (7920). The third Section involves in addition the constants $\pi$, $e$ and $\gamma$. 
+The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. We consider mainly the famous prime number 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the Monster group. The second section will study intermediate mathematical constants, of Eddington (137), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), Bizouard ($f$) and Matthieu (7920). The third Section involves in addition the classical constants $\pi$, $e$ and $\gamma$. 
 
 \section {Internal Fine Tuning and Canonical Large Numbers}
 We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, particle physics and mathematics.
@@ -105,7 +105,7 @@ We look here for a systematic organization of dimensionless physical quantities 
 The most famous fine tuning implies cosmic quantities, awkwardly called the `Double
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
 clue in steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity) [3].
-This Cosmic Fine-Tuning leads directly to a Gravitational Hydrogen model of the universe [3]
+This Cosmic Fine-Tuning leads directly to a \textit{Gravitational Hydrogen model of the visible universe} [3]
 defining the Universe horizon radius: $R = 2a_{G} \lambdabar_{e}$ the factor 2 coming from the two atoms in
 Hydrogen molecule, where 
 $\lambdabar_{e} = \hbar/cm_{e}$
@@ -117,7 +117,7 @@ Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R 
 most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by $9\%$, value.
 
 Consider the wavelength $$\lambdabar_{M} = \hbar /Mc \approx 4 \times 10^{-96} m$$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
-corresponding to $n \approx 2e^{e}$, to $0.01\%$. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
+corresponding to n $\approx 2e^{e}$, to $0.01\%$. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
 and results from the imbrication of relations of the form 
 $
 \lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2}
@@ -163,7 +163,7 @@ periodicity 8 [25] which is at the origin of the name `topological axis`.
     Holic dimension n = 30 is tied to $c$ times the cosmic Supercycle period, while Cartan-Bott reduction lead to the gauge bosons:
     n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
     For the superstring $n = 10$, it is the Pion. For $k \approx \pi$, $n \approx \gamma \times \Gamma$, $Y \approx 496^2$ 
-    the square of the Green-Schwartz string dimension and the tenth root of the Monster cardinal, it is
+    the square of the Green-Schwarz string dimension and the tenth root of the Monster cardinal, it is
     the Brout-Englert-Higgs boson (125 GeV). For $k \approx 2e^e$, it is the Topon, the visible Universe wavelength,
     which identifies with the monoradial unit length of the Bekenstein-Hawking Univers entropy.
    \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while $n \approx \Gamma$, 
@@ -435,7 +435,7 @@ first one, and the transcendental number $\pi$ appears as a factor of orbital st
 incommensurability, of motions, or frequencies (the $\pi$ number, in fact, characterizes geometry of
 space; for details see Kotov, 2018).
 
-Recently it was shown, that the $t_{\Theta}$ timescale characterizes, statistically, the motion of superfast
+Recently it was shown, that the $t_K$ timescale characterizes, statistically, the motion of superfast
 exoplanets too, see Figure 5.
 
 It was shown in fact, that a number of superfast, with periods inferior to 2 days, exoplanets revolve
