--- a/main.tex
+++ b/main.tex
@@ -51,7 +51,7 @@ $^5$ Pr. at Ecole Centrale, Paris, France (retired).
 $^6$Astronomer at OBSPM, Paris, France.
 $^7$Architect / Math Instructor at Ecole Nationale Superieure d'Architecture Paris Malaquais, France.
 $^8$Computer Science Engineer.
-$^9$Retired Maitre de Conference at Ecole Nationale Superieure d'Architecture Paris Malaquais, France.
+$^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, France (retired).
 
 }\par
 \medskip
@@ -1015,7 +1015,7 @@ implies Life, in contradiction with the Darwin `accidental life` approach, a gen
 called `theory` with too much missing links [26]. The fundamental hypothesis of
 this article is that the Cosmos is like a computer. A common point with the brain is the multi-base
 character, experienced in musical sensation. Thus, \textit{intelligent life must be universal}. The famous Fermi
-question `where are they` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a
+question `where are they ?` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a
 dogmatic community.
 
 Another type of separation exists, but with not any debate: only a small minority thinks Physics
