--- a/main.tex
+++ b/main.tex
@@ -648,13 +648,14 @@ compatible with measurement $a \approx 137.035999139(31)$ in:
 \begin{equation}
 ln137/ln(a/137) \approx (2+135/d_{e})^{2}
 \end{equation}
-meaning the ratio $a/137$ acts as a canonical ratio. Moreover, it is very close (3 ppb) to
-$$a/137 \approx 3^{a/F}$$
-where the Tifft factor $F/a$ appears again, proving that the base 3, the optimal whole number basis, is also used by the Cosmos. Moreover, to 3.6 ppm:
-$$ a \approx (1-3^{-1/150})^{-1}$$
-confirms the role of the basis 3.
+meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precizing [3] the inverse of the standard 'strong coupling constant' 0.1184(7), $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$, appears as a computation basis, in, to 0.3, 0.2 and 0.7 \%:
+$$(a/137)^F \approx 3^a \approx f^{f^2}/\pi \approx (O_B/f)^2 $$
+proving that the base 3, \textit{the optimal whole number basis}, is also used by the Cosmos and that the cardinal order plays also a role (as confirmed below). 
+Moreover, to 27 ppb:
+$$ a/(a-1) \approx 3^{1/150}) $$
+So, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, vert close (2 ppm) to the Bond factor [2] 137/136.
 
-\subsection{The Arithmetical Logic : Holic Principle}
+\subsection{The Arithmetical Logic: Holic Principle}
 
 In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
 simplest one is $T^{2} = L^{3}$, where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are co-
@@ -739,7 +740,7 @@ The central term $F^3/a$ exhibits another relation between $j$ and $\Gamma$, to 
 \begin{equation}
 F^3/a \approx (3/e)(e/2)^j  \approx (3/\pi) 4^{\Gamma}
 \end{equation}
-confirming that $j$ and $G$ has the status of invariant generalised dimension, i.e. they are, according to the Holic Principle, privileged exponents.
+confirming that $j$ and $\Gamma$ has the status of invariant generalised dimension, i.e. they are, according to the Holic Principle, privileged exponents.
 
 \subsection{Ubiquity of $a^{a}$}
 
@@ -769,7 +770,7 @@ O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \hbar Gc^{5}/E_{Ryd}^{2}
 \end{equation}
 Moreover the above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm:
 $$e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}$$
-implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Higgs boson in the Topological Axis (Fig.1). The Bizouard constant, precizing the inverse of the standard 'strong coupling constant 0.1184(7), $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation basis, and the above relation implies, to 61 ppm:
+implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Higgs boson in the Topological Axis (Fig.1). The above Bizouard constant confirms it is a computation basis, and the above relation implies, to 61 ppm:
 \begin{equation}
 lnf\approx \pi e/4d_e
 \end{equation}
