--- a/main.tex
+++ b/main.tex
@@ -642,18 +642,18 @@ point (H atom-Pion couple) for the superstring value n = 10, and the remarkable 
 \begin{equation}
 \sum_{k=7}^{k=0}(2 + 4 k ) = 2^{7}
 \end{equation}
-So $137 = 2^{7} - 1 + 3 + 7$, the Combinatorial Hierarchy form [3]. But this appears also as 137 = 135 + 2,
+So $137 = 2^{7} - 1 + 3 + 7$ the Combinatorial Hierarchy form [3]. But this appears also as 137 = 135 + 2,
 with the dimension 2 of the String patent. In particular, one obtains the value $a \approx 137.035999119$
 compatible with measurement $a \approx 137.035999139(31)$ in:
 \begin{equation}
 ln137/ln(a/137) \approx (2+135/d_{e})^{2}
 \end{equation}
-meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precizing [3] the inverse of the standard 'strong coupling constant' 0.1184(7), $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$, appears as a computation basis, in, to 0.3, 0.2 and 0.7 \%:
+meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precizing [3] the inverse of the standard 'strong coupling constant' 0.1184(7): $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation basis, in the following dramatic relations, to 0.3, 0.2 and 0.7 \%:
 $$(a/137)^F \approx 3^a \approx f^{f^2}/\pi \approx (O_B/f)^2 $$
-proving that the base 3, \textit{the optimal whole number basis}, is also used by the Cosmos and that the cardinal order plays also a role (as confirmed below). 
-Moreover, to 27 ppb:
+proving that the base 3, \textit{the optimal whole number basis}, is also used by the Cosmos and that the cardinal order $O_B$ of the Baby Monster plays also a role (as confirmed below). 
+Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{prime}/\lambdabar_e \approx 27^{27}, with 27 = 3^3$ to 0.03 \%  Moreover, to 27 ppb:
 $$ a/(a-1) \approx 3^{1/150}) $$
-So, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, vert close (2 ppm) to the Bond factor [2] 137/136.
+Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 ppm) to the Bond factor 137/136, central in Eddington's theory [2].
 
 \subsection{The Arithmetical Logic: Holic Principle}
 
