--- a/main.tex
+++ b/main.tex
@@ -650,9 +650,9 @@ ln137/ln(a/137) \approx (2+135/d_{e})^{2}
 \end{equation}
 meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precizing [3] the inverse of the standard 'strong coupling constant' 0.1184(7): $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation basis, in the following dramatic relations, to 0.3, 0.2, 0.7 \% and 22 ppb ! (confirmation of $G$ value):
 $$(a/137)^F \approx 3^a \approx f^{f^2}/\pi \approx (O_B/f)^2 \approx P^4 (2/3)^a (p/p_0)^2 $$
-proving that the base 3, \textit{the optimal whole number basis}, is also used by the Cosmos and that the cardinal order $O_B$ of the Baby Monster plays also a role (as confirmed below). 
+proving that the base 3, \textit{the optimal whole number basis}, is also used by the Cosmos as well as $O_B$, the cardinal order  of the Baby Monster (as confirmed below). 
 Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{prime}/\lambdabar_e \approx 27^{27}, with 27 = 3^3$ to 0.03 \%  Moreover, to 27 ppb:
-$$ a/(a-1) \approx 3^{1/150}) $$
+$$ a/(a-1) \approx 3^{1/150} $$
 Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 ppm) to the Bond factor 137/136, central in Eddington's theory [2].
 
 \subsection{The Arithmetical Logic: Holic Principle}
