--- a/main.tex
+++ b/main.tex
@@ -1146,8 +1146,8 @@ cosmology is the basis of United Science.
 they are optimal basis of computation tied with the Holographic Principle and its arithmetic form,
 the Holic Principle.
 \item 5/ The necessity of the Cosmos vasteness, resulting from holographic scanning and the rationalisation of $e$ and $\pi$
-\item 6/ The so-called Dark energy proportion 0.7, which is a false problem, since
-3/10 is the trivial ratio between gravitational and critical energy. The Eddington's textit{invariant} cosmological constant is rehabilitated, corresponding to a repulsive force proportional to distance, explaining \{exponential} recession.
+\item 6/ The so-called Dark energy proportion 0.7, is shown to be a false problem, since
+3/10 is the trivial ratio between gravitational and critical energy. The Eddington's \textit{invariant} cosmological constant is rehabilitated, corresponding to a repulsive force proportional to distance, explaining \textit{exponential} recession.
 \item 7/ The very existence of dark matter is proven, from the number of neutrons in this fraction 3/10 of the visible Universe critical mass, which identifies with the very symmetric Eddington's number $136 \times 2^256$. The nature of dark matter is simply an anti-phase matter-antimatter oscillation [3].  
 \item 8/ The introduction of the Topon
 justifies the $10^{122}$ gap between vacuum energy and that of the visible Universe.
