--- a/main.tex
+++ b/main.tex
@@ -1052,15 +1052,15 @@ The pertinence of our simple polynomial relations cannot be admitted by the stan
 Finally, there is the problem of infinity. While it is wellcome in mathematics, it is condamned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of rationalisation of $e$ and $\pi$. This have been shown in this article.
 
 \section {Conclusions : cosmic simplicity at work}
-\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
+\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ \textit{Back to Cosmos}}
 
 The application of the old direct scientific method, looking for fine tuning between physical
 parameters leads to a return to the Perfect Cosmological Principle implying a Steady-state Cosmos,
 confirmed by holographic relations. The standard cosmological principle was unduly limited to
 spatial homogeneity. The relativity theory, unable to define an inertial frame, is a local one and do
 not apply to Cosmology at large: the Absolute Space is reestablished, realized by the Microwave
-Cosmic Background, which identifies with the Grandcosmos Frame, while Kotov period is a quasi-
-absolute clock, ruled by the tachyonic celerity.
+Cosmic Background, which identifies with the Grandcosmos Frame, while Kotov period is an
+absolute clock, the dephasage of coherent oscillations between deferent quasars being ruled by the tachyonic celerity.
 
 The simplest topological equations, the equality between dimensionless topological varieties,
 circumference, area, 3D volume... appear to apply in cosmology, which, for many, seems to be the hardiest
@@ -1074,16 +1074,14 @@ dimensions and 4 of space-time.
 
 The standard Holographic Principle must be generalized to wavelengths others than the Planck
 length, in particular the Topon, the visible Universe wavelength in 1D holography, which breaks
-another taboo of current thinking: the Planck wall, by an enormous factor, about $10^{61}$ , resolving the
+another taboo of current thinking: the Planck wall, by an enormous factor, about $10^{61}$, resolving the
 vacuum energy dilemma factor $10^{122}$.
 
-The high precision (to ppb) prove that the traditional scientific thinking is not at all baffled by
+The high precision of relations prove that the traditional scientific thinking is not at all baffled by
 the physical parameter values, meaning they are mere mathematical constants. In this respect, the
-high precision in the measurement of the Fermi constant, Muon mass, background temperature and
-Kotov cosmic period must be saluted as decisive achievements.
+high precision in the measurement of the Electric and Fermi constants, Proton, Neutron and Muon masses, Kotov cosmic period, and, to a less extent, background temperature, must be saluted as decisive achievements.
 
-The simplest method of looking for simple monomial expressions involving mathematical
-constants leads to ppb correlations, confirming Cosmos Unicity. Atiyah wrote [24]: `Nobody has
+In particular, the simplest method of looking for simple monomial expressions leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote [24]: `Nobody has
 ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... Similarly no one
 should be worried what the Universe would be if $a$ were not 137.035999...` This is a definite
 rejection of the Multiverse Hypothesis.
@@ -1094,22 +1092,22 @@ physics, taking the electron wavelength as unity. \textit {the double logarithm 
 
 The pertinence of the Topological Axis confirms
 the importance of the electron wavy propagation. This rehabilitates the string theory, including the
-tachyonic bosonic version, since the canonical dimension 26 appears to characterize the observable
+\textit{tachyonic} bosonic version, since the canonical dimension 26 appears to characterize the observable
 universe radius $R$. This confirms that $c$ is not really a cosmic pertinent speed, as is clearly shown both by
 logic (it is far too slow) and quantum non-locality.
 
-Moreover, excluding $c$ from the simplest tool of elementary physics, prospective dimensional
+Moreover, excluding $c$ from the simplest tool of elementary physics, the prospective dimensional
 analysis, this gives immediately a very good approximation of both R/2, the cosmic temperature and the cosmic super-cycle periodicity, which connects with the holic dimension n = 30 in the
 Topological Axis, whose apparent asymmetry suggests directly the existence of a Grandcosmos.
 
 While it is claimed that String Theory do not connect with experiment, the Cartan-Bott periodicity
-appears, unifying the gauge bosons, so confirming the Standard Model of Particle Physics, but with
+appears, unifying in particular the gauge bosons, so confirming the Standard Model of Particle Physics, but with
 massive gluon, which is independently seriously considered [31].
 
 This means also that the International System must go back to only three fundamental unities,
 Mass, Length and Time. The distinction between Length and Time must be emphasized, as
 Poincar\'{e}, the father of 4D Relativity Theory recommended. Indeed their confusion, by writing $c$ =
-1, impeded the fact that the Hubble-Lemaitre radius $R$ is a trivial length.
+1, impeded the fact that the Hubble-Lema\^{i}tre radius $R$ is a trivial length.
 
 The simplest model, the gravitational Hydrogen molecule gives $R$, explaining the 2 factor and
 justifying the elimination of $c$, as in the Haas-Bohr model. This corresponds to a Hubble constant 70.790
@@ -1130,7 +1128,7 @@ hypothesis that 26 physical parameters are defined by the 26 sporadic cardinal o
 Sporadic Groups are associated with octonion algebra [33], this rejoins a prediction of Atiyah's last
 work, the essential role of octonion algebra in the final theory [24].
 
-The ancestral problem of the stability of the solar system must be revisited, taking into account
+The problem of the stability of the solar system must be revisited, taking into account
 seriously a cosmic influence, characterized by the Kotov's period and length. Also the Pioneer, Tifft
 and Arp effects must be seriously considered, guided by the flickering Time-Length-Mass concept.
 
@@ -1146,22 +1144,20 @@ cosmology is the basis of United Science.
 they are optimal basis of computation tied with the Holographic Principle and its arithmetic form,
 the Holic Principle.
 \item 5/ The necessity of the Cosmos vasteness, resulting from holographic scanning and the rationalisation of $e$ and $\pi$
-\item 6/ The so-called Dark energy proportion 0.7, is shown to be a false problem, since
-3/10 is the trivial ratio between gravitational and critical energy. The Eddington's \textit{invariant} cosmological constant is rehabilitated, corresponding to a repulsive force proportional to distance, explaining \textit{exponential} recession.
-\item 7/ The very existence of dark matter is proven, from the number of neutrons in this fraction 3/10 of the visible Universe critical mass, which identifies with the very symmetric Eddington's number $136 \times 2^{256}$. The nature of dark matter is simply an anti-phase matter-antimatter oscillation [3].  
-\item 8/ The introduction of the Topon
-justifies the $10^{122}$ gap between vacuum energy and that of the visible Universe.
+\item 6/ The acceleration of expansion, which was predicted by the Eddington's \textit{invariant} cosmological constan $1/R^2$, is tied to a repulsive force proportional to distance, leading to \textit{exponential} recession. there is no need of the so-called 'dark energy'.
+\item 7/ The very existence of dark matter is proven, from the number of neutrons in the trivial fraction 3/10 of the visible Universe critical mass, which identifies with the very symmetric Eddington's number $136 \times 2^{256}$. The nature of dark matter would be simply an anti-phase matter-antimatter oscillation [3].  
+\item 8/ The introduction of the Topon in the Holographic Principle justifies at last the $10^{122}$ gap between vacuum energy and that of the visible Universe.
 
 In short, the rediscovered cosmos unifies the two main modern cosmologies in a rapid matter-
-antimatter oscillatory bounce. The Cosmos appear as simple, unique, permanent, computational,
-deterministic, trans-planckian, cyclic, topological and inverse-anthropic.
+antimatter oscillatory bounce. The Cosmos appear as \textit{simple, unique, permanent, computational,
+deterministic, trans-planckian, cyclic, topological and inverse-anthropic}.
 
-It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of Philosophy, Mathematics, Physics, Chemistry, Informatics and Biology. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fundamental Theory must be revisited, specially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
+It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of \textit{Philosophy, Mathematics, Physics, Chemistry, Informatics and Biology}. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fundamental Theory must be revisited, specially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
 
       This article leads to some predictions:
-\item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the already refuted standard evolutionary model.
-\item 2/ The Particle Physics will integrate the Koide relation and introduce massive gluons and composite quark d.
-\item 3/ Informatics software will be boosted by the principle of multi-base computation.
+\item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the \textit{already refuted} standard evolutionary model.
+\item 2/ The Particle Physics will integrate the Koide relation and introduce massive gluons and composite quark down.
+\item 3/ Informatics software should  be boosted by the principle of multi-base computation.
 \item 4/ The multiple connexions with the DNA chain seems to imply it is a 1D hologram. Recent studies [30] are on this way. 
 \end{itemize}
 
