--- a/main.tex
+++ b/main.tex
@@ -1079,7 +1079,7 @@ vacuum energy dilemma factor $10^{122}$.
 
 The high precision of relations prove that the traditional scientific thinking is not at all baffled by
 the physical parameter values, meaning they are mere mathematical constants. In this respect, the
-high precision in the measurement of the Electric and Fermi constants, Proton, Neutron and Muon masses, Kotov cosmic period, and, to a less extent, background temperature, must be saluted as decisive achievements.
+high precision in the measurement of the Electric and Fermi constants, Proton, Neutron and Muon masses, Kotov cosmic period, and, with far lesser precision, background temperature, must be saluted as decisive achievements.
 
 In particular, the simplest method of looking for simple monomial expressions leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote [24]: `Nobody has
 ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... Similarly no one
@@ -1147,6 +1147,7 @@ the Holic Principle.
 \item 6/ The acceleration of expansion, which was predicted by the Eddington's \textit{invariant} cosmological constan $1/R^2$, is tied to a repulsive force proportional to distance, leading to \textit{exponential} recession. there is no need of the so-called 'dark energy'.
 \item 7/ The very existence of dark matter is proven, from the number of neutrons in the trivial fraction 3/10 of the visible Universe critical mass, which identifies with the very symmetric Eddington's number $136 \times 2^{256}$. The nature of dark matter would be simply an anti-phase matter-antimatter oscillation [3].  
 \item 8/ The introduction of the Topon in the Holographic Principle justifies at last the $10^{122}$ gap between vacuum energy and that of the visible Universe.
+\item 9/ The grandcosmos is huge but not infinte, in conformity with the Cosmological Computational Principle
 
 In short, the rediscovered cosmos unifies the two main modern cosmologies in a rapid matter-
 antimatter oscillatory bounce. The Cosmos appear as \textit{simple, unique, permanent, computational,
