--- a/main.tex
+++ b/main.tex
@@ -1116,8 +1116,8 @@ confirms the direct novea measurement, but disagree (3$\sigma$) with the standar
 
 The simplest statistical theory of Eddington gave another justification to $R$. Also, particularly
 simple and elegant is the Large Eddington number, giving correctly the number of neutrons in the
-trivial fraction 3M/10 of the observable universe. \textit{This is probably the most dramatic prediction in
-all scientific history}
+trivial fraction 3M/10 of the observable universe, \textit{probably the most dramatic prediction in
+ scientific history}.
 
 The simplest proof of the computation basis character of the electrical parameter $a$ is provided
 by the multiple appearance of the terms $e^{a}$ and $a^{a}$.
