--- a/main.tex
+++ b/main.tex
@@ -42,11 +42,11 @@
 \renewcommand{\baselinestretch}{1.0}
 \bigskip
 F. M. Sanchez$^1\!$, \ V. A. Kotov$^2\!$, \ M. Grosmann$^3$, \ D. Weigel$^4$, \ R. Veysseyre$^5$, \ C. Bizouard$^6$, \ N. Flawisky$^7$, \ D. Gayral$^8$, \ L. Gueroult$^9$\\
-{\footnotesize  $^1$ Pr. Universite Paris 11, Orsay, France (retired).\rule{0pt}{12pt}
+{\footnotesize  $^1$ Pr. Universit\'{e} Paris 11, Orsay, France (retired).\rule{0pt}{12pt}
 E-mail: hol137-at-yahoo-dot-com\\
 $^2$Astronomer Crimean Astrophysical Observatory CrAO, Nauchny, Crimea, Russian Federation.
-$^3$ Pr. at Universite Louis Pasteur Strasbourg, France (retired).
-$^4$ Pr. at Universite of Dijon and Paris 6, France (retired).
+$^3$ Pr. at Universit\'{e} Louis Pasteur Strasbourg, France (retired).
+$^4$ Pr. at Universit\'{e} of Dijon and Paris 6, France (retired).
 $^5$ Pr. at Ecole Centrale, Paris, France (retired).
 $^6$Astronomer at OBSPM, Paris, France.
 $^7$Architect / Math Instructor at Ecole Nationale Superieure d'Architecture Paris Malaquais, France.
