--- a/main.tex
+++ b/main.tex
@@ -45,11 +45,11 @@ F. M. Sanchez$^1\!$, \ V. A. Kotov$^2\!$, \ M. Grosmann$^3$, \ D. Weigel$^4$, \ 
 {\footnotesize  $^1$ Pr. Universit\'{e} Paris 11, Orsay, France (retired).\rule{0pt}{12pt}
 E-mail: hol137-at-yahoo-dot-com\\
 $^2$Astronomer Crimean Astrophysical Observatory CrAO, Nauchny, Crimea, Russian Federation.
-$^3$ Pr. at Universit\'{e} Louis Pasteur Strasbourg, France (retired).
+$^3$ Pr. at Universit\'{e} Louis Pasteur, Strasbourg, France (retired).
 $^4$ Pr. at Universit\'{e} of Dijon and Paris 6, France (retired).
 $^5$ Pr. at Ecole Centrale, Paris, France (retired).
 $^6$Astronomer at OBSPM, Paris, France.
-$^7$Architect / Math Instructor at Ecole Nationale Superieure d'Architecture Paris Malaquais, France.
+$^7$Architect / Math Instructor at Ecole Nationale Superieure d'Architecture, Paris Malaquais, France.
 $^8$Computer Science Engineer.
 $^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, France (retired).
 
@@ -1186,18 +1186,17 @@ Nature 278, 605-612 (1979). % Here is referred book
 \bibitem{3}  Sanchez F.M. \textit{Coherent Cosmology} Vixra.org,1601.0011. Sanchez F.M., Kotov V. and Bizouard C., \textit{Towards Coherent Cosmology}, Galilean Electrodynamics, special issue, winter 2013, pp 63-80.
 Sanchez F.M. \textit {A Coherent Resonant Cosmology Approach and its Implications in Microphysics and Biology}, Progress in Theoretical Chemistry and Physics 30, pp. 375-407.Springer (2017). DOI 10.1007/978-3-319-50255-7-2. % Here is referred book
 
-\bibitem{3} Bonvin V. Holicow, New cosmograil time delays of HE 0435-1223, arXiv: 1607.01790v2
+\bibitem{4} Bonvin V. Holicow, New cosmograil time delays of HE 0435-1223, arXiv: 1607.01790v2
 (2016). % Here is referred book
 
-\bibitem{4} Sanchez F.M., V. A. Kotov and C. Bizouard C. Towards a synthesis of two cosmologies: the
+\bibitem{5} Sanchez F.M., V. A. Kotov and C. Bizouard C. Towards a synthesis of two cosmologies: the
 steady-state flickering Universe., \textit{Journal of Cosmology}, v.\, 17, 7225-7237 (2011). % Here is referred book
 
-\bibitem{5} Bousso R., “The Holographic Principle”, \textit{Review of Modern Physics}, v.\, 74, p.834 (2002).[7] Duplantier B. Introduction à l'effet Casimir, Séminaire Poincar\'{e} 1 (2002), 41-54.. % Here is referred book
+\bibitem{6} Bousso R., “The Holographic Principle”, \textit{Review of Modern Physics}, v.\, 74, p.834 (2002).
 
-\bibitem{6} Damour T. The Entropy of Black Hole: a Primer. Séminaire Poincar\'{e} 2 (2003), 100 (89-115. % Here is referred book
+\bibitem{7} Duplantier B. Introduction à l'effet Casimir, Séminaire Poincar\'{e} 1 (2002), 41-54.. % Here is referred book
 
-\bibitem{7} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
-\textit{Nature} 278, 605-612 (1979). % Here is referred book
+\bibitem{8} Damour T. The Entropy of Black Hole: a Primer. Séminaire Poincar\'{e} 2 (2003), 100 (89-115. % Here is referred book
 
 \bibitem{8} Kotov V. A. and Lyuty V. M., “The 160-min. Periodicity in the optical and X-ray observations of
 extragalactic objects.” Compt. Rend. Acad. Sci. Paris 310, Ser. II, 743-748 (1990). Fossat, E.,
