--- a/main.tex
+++ b/main.tex
@@ -1164,9 +1164,7 @@ It is now clear that present mathematics and Particle Physics are incomplete, an
 
 
 \section*{Acknowledgements}
-The authors salute the memory of Sir Michael Atiyah for his encourragements to the
-first author:`I appreciate your efforts in physics'. His introduction of the rather
-unexpected Euler-Mascheroni constant in the fine-tuning research has considerably helped our task
+The authors salute the memory of Sir Michael Atiyah. His comments and the introduction of the Euler-Mascheroni constant in the fine-tuning research has considerably helped our task
 of proving the existence of a fundamental theory. We also thank helpful discussions with the 
 mathematician Anatole Khelif and private communication by Joel Sternheimer about his scale factor, 
 we called $j$ in his honor.
