--- a/main.tex
+++ b/main.tex
@@ -613,21 +613,15 @@ confirms the above Planck's wall breakdown.
 \subsection{The Eddington's constant 137}
 
 The initial Eddington's proposal for $a$ was the whole number 136, as the number of independent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
-series: 3,11,5,137,7,11, showing a symmetry between the 11 dimensions of M theory (a synthesis of five string theories) and the 4 of space-time. Indeed:
-
-$$137 = 11^{2} + 4^{2}$$
-
-while, as seen above:
-
-$$11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}$$
+series: 3,11,5,137,7,11, showing a symmetry between the 11 dimensions of M theory (a synthesis of five string theories) and the 4 of space-time. Indeed: $137 = 11^{2} + 4^{2}$, while, as seen above:$11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}$
 
 Since Riemann series are tied to the prime number distribution, it seemss odd and incredible that mathematicians
 have not point out the primes appearing in the harmonic series, since it is the single pole. It seems
 that the basic precept `all occurs in the pole` was forgotten in this case. 
 
 As ancient Egyptian used only fractions of type $1/n$, they were certainly aware of this particular harmonic series: 
-$$S_{5} = 137/60$$
-Indeed it appears in the Ptolemaic approximation for $\pi$: $$\pi_{Pt} = 377/120 = 2 +  S_{5}/2$$
+$S_{5} = 137/60$
+Indeed it appears in the Ptolemaic approximation for $\pi$: $\pi_{Pt} = 377/120 = 2 +  S_{5}/2$.
 
 Recall that the electrical constant $a$ characterizes the force $$F =\hbar c/al^{2}$$ between two l-distant
 elementary charges, where $a$ appears central in Atomic Physics and in many fine-tuning relations [1]. It is
@@ -672,14 +666,10 @@ T^{2} = L^{3} = M^{5} = N^{30}
 \end{equation}
 where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, relating to the apparent world. The Complete Holic
 Principle involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. It is confirmed by (to 15 ppm, 1.1 ppm, 56 ppm):
-\begin{equation}
-2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu
-\end{equation}
-where appear the masses of the heavy leptons (Section 4.6). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm:
-\begin{equation}
-\delta \approx e^{2/e^2} 
-\end{equation}
-confirming the central role of $e$ (section 4.1).
+
+$$2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu$$,
+
+where appear the masses of the heavy leptons (Section 4.6). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm:$\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 4.1).
 
 
 \subsection{The Conservation of Information}
@@ -717,7 +707,7 @@ j \approx ln(R/\lambdabar e) + \Gamma \approx a - e^{\pi} \approx e^{\pi} lna
 \end{equation}
 It was noted [3] that $$j\approx T_{mam}/T_{CMB}$$ the ratio between mammal and cosmic temperatures, and that the mammal wavelength enters (1\%) $$(Rl_P)^{1/2}\approx hc/kT_{mam}$$ So, \textit{the couple thermal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension $n = 16$. Moreover, to 0.1\%, the water triple point enters: $$(R^{\prime}l_P)^{1/2}\approx hc/kT_{H2O}$$ which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved [3].
 
-Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation basis. Indeed, to 2\%: $$j^{22} \approx 3 P^2 $$ and, more precisely, to 0.01 \% :$$j^{22} \approx Pp_E^7 $$ where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
+Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation basis. Indeed, to 2\%: $j^{22} \approx 3 P^2 $ and, more precisely, to 0.01 \% :$j^{22} \approx Pp_E^7 $ where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
 
 The last equation means the implication of $B = e^{e^{\pi}}$, the double exponential of $\pi$, in the ultimate theory. Indeed, to 0.3 ppm and 0.03 \% :
 \begin{equation}
@@ -798,8 +788,8 @@ From the above relation, by taking the $137^{th}$ root, one obtains, to 0.03 \%:
 This proves the close imbrication of the optimal bases.
 
 \section{Fine-tuning with basic mathematical constants}
-\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\ Back to Cosmos}
-Since some dimensionless physical parameters are very precisely measured, it seems obvious to look for
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\textit{Back to Cosmos}}
+Since some dimensionless physical parameters are very precisely measured, we looked for
 relations with mathematical constants such as $e$, $\pi$ and $\gamma \approx
 0.577215665$, the Euler-Mascheroni constant, which appears already in the above single-electron
 cosmic radius and the Topological Axis.
