--- a/main.tex
+++ b/main.tex
@@ -331,7 +331,7 @@ is the value for which the mean cosmic value is also the atomic one:
 \frac{\sum(1/n)}{\sum(1/n^{2})} = a^{\prime}
 \end{equation}
 with the sum running from 2 to $R_{1} /\lambdabar_{e}$. This implies:
-$$R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15.77465  Gly$$
+$$R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15.77465 ~ Gly$$
 very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127/2}$, $\beta = (H - p)^{-1}$ is the
 Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Canonic Lenz-Wiler Approximation of $p$ (Section 4):
 $$R_{1} = ( p_{0} /p_{G} )(\beta R R^{\prime})^{1/2}$$
