--- a/main.tex
+++ b/main.tex
@@ -800,10 +800,10 @@ cosmic radius and the Topological Axis.
 f(k = e^{2}) = exp(2^{e^{2+1/2}}) \approx exp(e^{2e}+e^{2})
 \end{equation}
 where the supplementary term $exp(e^2)$ is close to $a^{3/2}$. Note these properies of the 'economic number', to 
-0.4 \%, 6 ppm, 46 ppm, 0.04 \%  
+0.4 \%, 6 ppm, 0.4 ppm, 0.04 \%  
 $$e^{e^e}\approx (lnp)^{lnp}          $$
 $$e^{e^e} \approx 137 (e^{e})^3   $$
-$$e^{e^e} \approx e^e p a^2/137 $$
+$$e^{e^e} \approx e^e a \sqrt{pH} (p/p_0)^2 $$
 $$e^{e^e}\approx j^6/F $$
 Note that $e^2$ is the limit of the following musical series:
 $$(3/2)^5 \approx (4/3)^7   \approx (5/4)^9  \approx  (6/5)^{11}  \approx   ...  \approx  (1+1/n)^{2n+1}  $$  
